added classId to Assignment
